--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://stalwart-tanuki-47eda8.netlify.app'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = "exampleSite"
